feat: add endpoint
